Bug 68967 - CRASH : Fileopen - LibreOffice crashes while opening doc file, and uses a lot of CPU
Summary: CRASH : Fileopen - LibreOffice crashes while opening doc file, and uses a lot...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.4.0
Keywords:
: 54072 70446 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-05 07:36 UTC by Marc Bessières
Modified: 2015-01-28 14:28 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
The document hanging is the smallest file I could make that reproduces the issue and hangs (97.00 KB, application/vnd.ms-word)
2013-09-05 07:36 UTC, Marc Bessières
Details
apple crash trace (77.68 KB, text/plain)
2013-09-05 12:52 UTC, Alex Thurgood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marc Bessières 2013-09-05 07:36:01 UTC
Created attachment 85230 [details]
The document hanging is the smallest file I could make that reproduces the issue and hangs

Problem description: 
At the organisation we had a big document that we were not able to open using LibreOffice. LibreOffice was hanging
I managed to create a reproducer that only contains 3 pages.
We checked with OpenOffice and got the same issue.

Steps to reproduce:
1. try loading attached document(hanging.doc)
2. see that it hangs

soffice --version
LibreOffice 4.1.1.2 7e4286b58adc75a14f6d83f53a03b6c11fa2903


Current behavior:
LibreOffice hangs and CPU usage is 100%

Expected behavior:
The document is opened

             
Operating System: Linux (Other)
Version: Inherited From OOo
Comment 1 retired 2013-09-05 10:45:23 UTC
Confirming on OS X 10.8.4 latest 4.2 master build from today.

Setting to NEW and Platform to ALL.
Comment 2 Alex Thurgood 2013-09-05 12:52:07 UTC
Changed title.

If left long enough, LibreOffice ends up crashing, producing the attached stack trace.


Alex
Comment 3 Alex Thurgood 2013-09-05 12:52:50 UTC
Created attachment 85251 [details]
apple crash trace
Comment 4 Alex Thurgood 2013-09-05 12:53:49 UTC
The trace would seem to indicate that this is a glyph/coretext problem.


Alex
Comment 5 Alex Thurgood 2013-09-05 12:55:52 UTC
Add Tor and Khaled to CC - not sure who deals with the font rendering problems.

Alex
Comment 6 Commit Notification 2014-09-16 14:15:20 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1fec67aab152e0c0ad6dd85082c50f1beff7d520

Resolves: fdo#68967 looping layout



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2014-10-08 10:14:19 UTC
*** Bug 54072 has been marked as a duplicate of this bug. ***
Comment 8 Matthew Francis 2015-01-28 14:28:34 UTC
*** Bug 70446 has been marked as a duplicate of this bug. ***