Resolves: fdo#68967 looping layout

RemoveFollowFlowLine() marks the layout invalid, but the
next cycle through does everything exactly the same again.

Try the same foul horror as nUnSplitted. But at least with
a test-case that nails down reproducing the bug if a better
fix is needed.

Change-Id: Id6698bcb2364bd0253bedd4a7c313e25f705be8d